# v-c-database

./: Makefile  README.md  doxygen.cfg  meson.build
include/vcdb/: builder.h  database.h  datastore.h  engine.h  error_codes.h  index.h  transaction.h
src/builder/: builder_private.h  vcdb_builder_add_datastore.c  vcdb_builder_add_generic.c  vcdb_builder_add_index.c  vcdb_builder_init.c
src/database/: database_private.h  vcdb_database_create_from_builder.c  vcdb_database_datastore_get.c  vcdb_database_delete_using_builder.c  vcdb_database_dispose.c  vcdb_database_index_get.c  vcdb_database_open_from_builder.c
src/datastore/: vcdb_datastore_init.c
src/engine/: vcdb_database_engine.h  vcdb_database_engine_lookup.c  vcdb_database_engine_register.c  vcdb_database_engine_registry.c
src/index/: vcdb_index_init.c
src/transaction/: vcdb_database_datastore_delete.c  vcdb_database_datastore_put.c  vcdb_database_index_delete.c  vcdb_transaction_begin.c  vcdb_transaction_commit.c  vcdb_transaction_rollback.c
test/: test_database.cpp  test_database.h  test_datastore.cpp  test_datastore.h  test_index.cpp  test_index.h  testmain.cpp
test/builder/: test_builder_add_datastore.cpp  test_builder_add_index.cpp  test_builder_init.cpp  test_database.cpp  test_database.h
test/database/: test_database_create_from_builder.cpp  test_database_datastore_get.cpp  test_database_delete_using_builder.cpp  test_database_index_get.cpp  test_database_open_from_builder.cpp
test/datastore/: test_datastore_init.cpp
test/index/: test_index_init.cpp
test/transaction/: test_database_datastore_delete.cpp  test_database_datastore_put.cpp  test_database_index_delete.cpp  test_transaction_begin.cpp  test_transaction_rollback.cpp
